# AoSSimulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.js_build  README.md  aossim.idl  glue_stub.cpp
manoamanoGUI/: CMakeLists.txt  CMakeLists.txt.in  guimain.cpp
src/: AgeOfSigmarSim.cpp  AoSSimPrivate.h  Battle.cpp  Battleshock.cpp  Board.cpp  CMakeLists.txt  Charge.cpp  Combat.cpp  CommandAbility.cpp  Dice.cpp  Game.cpp  Hero.cpp  ManoAMano.cpp  MathUtils.cpp  Model.cpp  Movement.cpp  Player.cpp  Prayer.cpp  Roster.cpp  Shooting.cpp  Spell.cpp  TerrainFeature.cpp  Think.cpp  Unit.cpp  UnitFactory.cpp  UnitInit.cpp  UnitStatistics.cpp  WarhammerSim.cpp  Weapon.cpp  aossim.idl  glue_stub.cpp  jps.hh  pathfinders.cpp  pathfinders.h
src/beastsofchaos/: Beastlord.cpp  BeastsOfChaosBase.cpp  BeastsOfChaosPrivate.h  Bestigors.cpp  Bullgors.cpp  Centigors.cpp  ChaosGargant.cpp  ChaosSpawn.cpp  ChaosWarhounds.cpp  Chimera.cpp  Cockatrice.cpp  Cygor.cpp  Doombull.cpp  DragonOgorShaggoth.cpp  DragonOgors.cpp  Ghorgon.cpp  Gors.cpp  GreatBrayShaman.cpp  Jabberslythe.cpp  Lore.cpp  Razorgors.cpp  TuskgorChariots.cpp  UngorRaiders.cpp  Ungors.cpp
src/behemat/: Bonegrinder.cpp  Gatebreaker.cpp  KrakenEater.cpp  Mancrusher.cpp  SonsOfBehehmetPrivate.h  SonsOfBehemat.cpp  Warstomper.cpp
src/bonesplitterz/: BoarboyManiaks.cpp  Bonesplitterz.cpp  BonesplitterzLore.cpp  BonesplitterzLore.h  BonesplitterzPrivate.h  ManiakWeirdnob.cpp  OrrukArrowBoys.cpp  OrrukMorboys.cpp  SavageBigBoss.cpp  SavageBigStabbas.cpp  SavageBoarboys.cpp  SavageOrruks.cpp  Wardokk.cpp  WurrgogProphet.cpp
src/citiesofsigmar/: Anointed.cpp  Assassin.cpp  Battlemage.cpp  BattlemageOnGriffon.cpp  BlackArkCorsairs.cpp  BlackArkFleetmaster.cpp  BlackGuard.cpp  Bleakswords.cpp  CelestialHurricanum.cpp  CitiesOfSigmar.cpp  CitiesOfSigmarPrivate.h  CoSLore.cpp  CoSLore.h  Cogsmith.cpp  DarkRiders.cpp  Darkshards.cpp  DemigryphKnights.cpp  DoraliaVenDenst.cpp  DrakespawnChariots.cpp  DrakespawnKnights.cpp  DreadlordOnBlackDragon.cpp  Dreadspears.cpp  EternalGuard.cpp  Executioners.cpp  Flagellants.cpp  FlamespyrePhoenix.cpp  FreeguildCrossbowmen.cpp  FreeguildGeneral.cpp  FreeguildGeneralOnGriffon.cpp  FreeguildGreatswords.cpp  FreeguildGuard.cpp  FreeguildHandgunners.cpp  FreeguildOutriders.cpp  FreeguildPistoliers.cpp  FrostheartPhoenix.cpp  GalenVenDenst.cpp  Gyrobombers.cpp  Gyrocopters.cpp  Hammerers.cpp  HelblasterVolleyGun.cpp  (+20 more)
src/death/: ArkhanTheBlack.cpp  BatSwarms.cpp  BlackKnights.cpp  BloodKnights.cpp  BloodseekerPalanquin.cpp  CairnWraith.cpp  CorpseCartBrazier.cpp  CorpseCartLodestone.cpp  CovenThrone.cpp  DeathLore.cpp  DeathLore.h  DireWolves.cpp  FellBats.cpp  GraveGuard.cpp  LegionOfNagash.cpp  LegionOfNagashPrivate.h  Mannfred.cpp  MorghastArchai.cpp  MorghastHarbingers.cpp  MortisEngine.cpp  Nagash.cpp  Necromancer.cpp  Neferata.cpp  PrinceVhordrai.cpp  SkeletonWarriors.cpp  VampireLord.cpp  VampireLordOnDragon.cpp  Vargheists.cpp  WightKingBlackAxe.cpp  WightKingTombBlade.cpp  Zombies.cpp
src/dispossessed/: Dispossessed.cpp  DispossessedPrivate.h  Hammerers.cpp  Ironbreakers.cpp  Irondrakes.cpp  Longbeards.cpp  Quarrellers.cpp  Runelord.cpp  Thunderers.cpp  Unforged.cpp  WardenKing.cpp  Warriors.cpp
src/dok/: AvatarOfKhaine.cpp  BloodSisters.cpp  BloodStalkers.cpp  BloodwrackMedusa.cpp  BloodwrackShrine.cpp  DaughterOfKhaine.cpp  DaughterOfKhainePrivate.h  DoKCommands.cpp  DoKCommands.h  DoomfireWarlocks.cpp  HagQueen.cpp  HagQueenCauldronOfBlood.cpp  KhainiteShadowstalkers.cpp  KhineraiHeartrenders.cpp  KhineraiLifetakers.cpp  LoreOfShadows.cpp  LoreOfShadows.h  MelusaiIronscale.cpp  MorathiHighOracle.cpp  MorathiShadowQueen.cpp  Morgwaeth.cpp  SistersOfSlaughter.cpp  SlaughterQueen.cpp  SlaughterQueenCauldronOfBlood.cpp  TheBladeCoven.cpp  WitchAelves.cpp
src/eldritchcouncil/: Archmage.cpp  ArchmageOnDragon.cpp  Loremaster.cpp  Swordmasters.cpp
src/everchosen/: Archaon.cpp  Varanguard.cpp
src/fec/: AbhorrantArchregent.cpp  AbhorrantGhoulKing.cpp  CryptFlayers.cpp  CryptGhastCourtier.cpp  CryptGhouls.cpp  CryptHaunterCourtier.cpp  CryptHorrors.cpp  CryptInfernalCourtier.cpp  DukeCrakmarrow.cpp  FeCSpells.cpp  FeCSpells.h  FleshEaterCourts.cpp  FleshEaterCourtsPrivate.h  GhoulKingOnTerrorgheist.cpp  GhoulKingOnZombieDragon.cpp  RoyalTerrorgheist.cpp  RoyalZombieDragon.cpp  SummonAbility.cpp  SummonAbility.h  TheGrymwatch.cpp  VarghulfCourtier.cpp
src/freeagents/: GotrekGurnisson.cpp  Kragnos.cpp
src/fyreslayers/: AuricHearthguard.cpp  AuricRunefather.cpp  AuricRunefatherOnMagmadroth.cpp  AuricRunemaster.cpp  AuricRunesmiter.cpp  AuricRunesmiterOnMagmadroth.cpp  AuricRuneson.cpp  AuricRunesonOnMagmadroth.cpp  Battlesmith.cpp  Doomseeker.cpp  FjulGrimnir.cpp  Fyreslayer.cpp  FyreslayerPrivate.h  GrimwrathBerzerker.cpp  HearthguardBerzerkers.cpp  Magmadroth.cpp  TheChosenAxes.cpp  VulkiteBerzerkers.cpp  ZharrgrimBlessing.cpp
src/gloomspitegitz/: AleguzzlerGargant.cpp  ArachnarokSpiderWithFlinger.cpp  ArachnarokSpiderWithWarparty.cpp  BadMoon.cpp  BoingrotBounderz.cpp  ColossalSquig.cpp  DankholdTroggboss.cpp  DankholdTroggoths.cpp  FellwaterTroggoths.cpp  FungoidCaveShaman.cpp  GloomspiteGitzBase.cpp  GloomspitePrivate.h  GloomspiteSpells.cpp  Gobbapalooza.cpp  Loonboss.cpp  LoonbossOnGiantCaveSquig.cpp  LoonbossOnManglerSquigs.cpp  LoonbossWithGiantCaveSquig.cpp  LoonsmashaFanatics.cpp  MadcapShaman.cpp  ManglerSquigs.cpp  Mollog.cpp  NikkitNikkit.cpp  RippasSnarlfangs.cpp  RockgutTroggoths.cpp  ScuttlebossOnSpider.cpp  Shootas.cpp  SkitterstrandArachnarok.cpp  Skragrott.cpp  SneakySnufflers.cpp  SpiderRiders.cpp  SporesplattaFanatics.cpp  SquigGobba.cpp  SquigHerd.cpp  SquigHoppers.cpp  Stabbas.cpp  TroggothHag.cpp  WebspinnerShaman.cpp  WebspinnerShamanOnSpider.cpp  Zarbag.cpp  (+1 more)
src/greenskinz/: OrrukBoarChariots.cpp  OrrukBoarboys.cpp  OrrukGreatShaman.cpp  OrrukWarboss.cpp  OrrukWarbossWyvern.cpp  Orruks.cpp  RogueIdol.cpp
src/idonethdeepkin/: AkhelianAllopexes.cpp  (+17 more)
web/: CMakeLists.txt  aossim.idl  app.js  glue_stub.cpp  index.html  package-lock.json  package.json  tsconfig.json
(+1387 files in other folders)
