project(WarhammerSim)

add_library(
        AoSSim STATIC
        Dice.cpp
        Unit.cpp
        Weapon.cpp
        Model.cpp
        Player.cpp
        Roster.cpp
        Battle.cpp
        Board.cpp
        TerrainFeature.cpp
        ManoAMano.cpp
        AgeOfSigmarSim.cpp
        Spell.cpp
        UnitFactory.cpp
        UnitInit.cpp
        MathUtils.cpp
        UnitStatistics.cpp
        CommandAbility.cpp
        Prayer.cpp
        Think.cpp
        jps.hh
        pathfinders.cpp

        spells/MysticShield.cpp
        spells/StormcastSpells.cpp
        spells/Empower.cpp
        spells/NikkitNikkit.cpp
        spells/LoreOfTheStorm.cpp
        spells/GloomspiteSpells.cpp
        spells/SylvanethSpells.cpp

        stormcast/CelestantPrime.cpp
        stormcast/Aetherwings.cpp
        stormcast/StormcastEternals.cpp
        stormcast/Liberators.cpp
        stormcast/Judicators.cpp
        stormcast/CelestarBallista.cpp
        stormcast/LordOrdinator.cpp
        stormcast/Retributors.cpp
        stormcast/Sequitors.cpp
        stormcast/Evocators.cpp
        stormcast/EvocatorsOnDracolines.cpp
        stormcast/LordCelestant.cpp
        stormcast/LordCelestantOnDracoth.cpp
        stormcast/LordCelestantOnStardrake.cpp
        stormcast/KnightIncantor.cpp
        stormcast/KnightQuestor.cpp
        stormcast/KnightZephyros.cpp
        stormcast/VanguardHunters.cpp
        stormcast/VanguardRaptorsHurricane.cpp
        stormcast/VanguardRaptorsLongstrike.cpp
        stormcast/Castigators.cpp
        stormcast/VandusHammerhand.cpp
        stormcast/GryphHounds.cpp
        stormcast/Concussors.cpp
        stormcast/Desolators.cpp
        stormcast/Fulminators.cpp
        stormcast/Tempestors.cpp
        stormcast/Protectors.cpp
        stormcast/Prosecutors.cpp
        stormcast/Decimators.cpp
        stormcast/NeaveBlacktalon.cpp
        stormcast/GavrielSureheart.cpp
        stormcast/LordExorcist.cpp
        stormcast/LordRelictor.cpp
        stormcast/LordArcanumOnDracoline.cpp
        stormcast/LordArcanumOnGryphcharger.cpp
        stormcast/LordArcanumOnTauralon.cpp
        stormcast/LordArcanum.cpp
        stormcast/LordAquilor.cpp
        stormcast/LordCastellant.cpp
        stormcast/LordVeritant.cpp
        stormcast/KnightAzyros.cpp
        stormcast/KnightHeraldor.cpp
        stormcast/KnightVenator.cpp
        stormcast/KnigthVexillor.cpp
        stormcast/AstreiaSolbright.cpp
        stormcast/AventisFirestrike.cpp
        stormcast/VanguardPalladors.cpp
        stormcast/DrakeswornTemplar.cpp
        stormcast/PrayersOfTheStormhosts.cpp
        stormcast/StormcastPrayers.cpp
        stormcast/SteelheartsChampions.cpp
        stormcast/TheFarstriders.cpp
        stormcast/AveronStormsire.cpp
        stormcast/StormsiresCursebreakers.cpp

        khorne/KhorneBase.cpp
        khorne/Bloodreavers.cpp
        khorne/BloodWarriors.cpp
        khorne/Bloodletters.cpp
        khorne/Skullreapers.cpp
        khorne/Wrathmongers.cpp
        khorne/Khorgoraths.cpp
        khorne/BloodthirsterOfInsensateRage.cpp
        khorne/BloodthirsterOfUnfetteredFury.cpp
        khorne/WrathOfKhorneBloodthirster.cpp
        khorne/Skarbrand.cpp
        khorne/Karanak.cpp
        khorne/FleshHounds.cpp
        khorne/Skulltaker.cpp
        khorne/Bloodmaster.cpp
        khorne/Bloodcrushers.cpp
        khorne/MightySkullcrushers.cpp
        khorne/Skullmaster.cpp
        khorne/VorgarothAndSkalok.cpp
        khorne/MightyLordOfKhorne.cpp
        khorne/Slaughterpriest.cpp
        khorne/KorghosKhul.cpp
        khorne/ExaltedDeathbringer.cpp
        khorne/Bloodsecrator.cpp
        khorne/Bloodstoker.cpp
        khorne/BloodThrone.cpp
        khorne/SkullCannons.cpp
        khorne/ValkiaTheBloody.cpp
        khorne/AspiringDeathbringer.cpp
        khorne/Skullgrinder.cpp
        khorne/ScylaAnfingrimm.cpp
        khorne/LordOfKhorneOnJuggernaut.cpp
        khorne/BloodBlessingsOfKhorne.cpp
        khorne/SkarrBloodwrath.cpp
        khorne/Riptooth.cpp
        khorne/MagoresFiends.cpp
        khorne/GarreksReavers.cpp

        sylvaneth/SylvanethBase.cpp
        sylvaneth/Alarielle.cpp
        sylvaneth/SpiritOfDurthu.cpp
        sylvaneth/KurnothHunters.cpp
        sylvaneth/Dryads.cpp
        sylvaneth/TreeRevenants.cpp
        sylvaneth/SpiteRevenants.cpp
        sylvaneth/DrychaHamadreth.cpp
        sylvaneth/Treelord.cpp
        sylvaneth/TreelordAncient.cpp
        sylvaneth/Branchwraith.cpp
        sylvaneth/Branchwych.cpp
        sylvaneth/ArchRevenant.cpp
        sylvaneth/Ylthari.cpp
        sylvaneth/YlthariGardians.cpp
        sylvaneth/SkaethsWildHunt.cpp

        gloomspitegitz/SquigHerd.cpp
        gloomspitegitz/SquigHoppers.cpp
        gloomspitegitz/BoingrotBounderz.cpp
        gloomspitegitz/LoonbossOnManglerSquigs.cpp
        gloomspitegitz/ManglerSquigs.cpp
        gloomspitegitz/ColossalSquig.cpp
        gloomspitegitz/Stabbas.cpp
        gloomspitegitz/Shootas.cpp
        gloomspitegitz/DankholdTroggboss.cpp
        gloomspitegitz/DankholdTroggoths.cpp
        gloomspitegitz/RockgutTroggoths.cpp
        gloomspitegitz/Skragrott.cpp
        gloomspitegitz/Loonboss.cpp
        gloomspitegitz/LoonbossOnGiantCaveSquig.cpp
        gloomspitegitz/LoonbossWithGiantCaveSquig.cpp
        gloomspitegitz/AleguzzlerGargant.cpp
        gloomspitegitz/SquigGobba.cpp
        gloomspitegitz/GloomspiteGitzBase.cpp
        gloomspitegitz/BadMoon.cpp
        gloomspitegitz/SpiderRiders.cpp
        gloomspitegitz/FellwaterTroggoths.cpp
        gloomspitegitz/FungoidCaveShaman.cpp
        gloomspitegitz/MadcapShaman.cpp
        gloomspitegitz/WebspinnerShaman.cpp
        gloomspitegitz/WebspinnerShamanOnSpider.cpp
        gloomspitegitz/ArachnarokSpiderWithFlinger.cpp
        gloomspitegitz/ArachnarokSpiderWithWarparty.cpp
        gloomspitegitz/SkitterstrandArachnarok.cpp
        gloomspitegitz/SneakySnufflers.cpp
        gloomspitegitz/ScuttlebossOnSpider.cpp
        gloomspitegitz/RippasSnarlfangs.cpp
        gloomspitegitz/Zarbag.cpp
        gloomspitegitz/ZarbagsGitz.cpp

        dok/DaughterOfKhaine.cpp
        dok/WitchAelves.cpp
        dok/BloodSisters.cpp
        dok/KhineraiLifetakers.cpp
        dok/SistersOfSlaughter.cpp
        dok/KhineraiHeartrenders.cpp
        dok/DoomfireWarlocks.cpp
        dok/BloodStalkers.cpp
        dok/HagQueen.cpp
        dok/SlaughterQueen.cpp
        dok/AvatarOfKhaine.cpp
        dok/BloodwrackMedusa.cpp

        idonethdeepkin/IdonethDeepkin.cpp
        idonethdeepkin/NamartiThralls.cpp
        idonethdeepkin/NamartiReavers.cpp
        idonethdeepkin/IshlaenGuard.cpp
        idonethdeepkin/MorrsarrGuard.cpp
        idonethdeepkin/AkhelianLeviadon.cpp
        idonethdeepkin/AkhelianKing.cpp
        idonethdeepkin/Volturnos.cpp
        idonethdeepkin/AkhelianAllopexes.cpp
        idonethdeepkin/EidolonSea.cpp
        idonethdeepkin/EidolonStorm.cpp
        idonethdeepkin/Lotann.cpp
        idonethdeepkin/IsharannSoulscryer.cpp
        idonethdeepkin/IsharannSoulrender.cpp
        idonethdeepkin/IsharannTidecaster.cpp

        nighthaunt/Nighthaunt.cpp
        nighthaunt/GrimghastReapers.cpp
        nighthaunt/ChainraspHorde.cpp
        nighthaunt/BladegheistRevenants.cpp
        nighthaunt/GlaivewraithStalkers.cpp
        nighthaunt/DreadscytheHarridans.cpp
        nighthaunt/Hexwraiths.cpp
        nighthaunt/SpiritHosts.cpp
        nighthaunt/Chainghasts.cpp
        nighthaunt/GuardianOfSouls.cpp
        nighthaunt/KnightOfShrouds.cpp
        nighthaunt/KnightOfShroudsOnSteed.cpp
        nighthaunt/KurdossValentian.cpp
        nighthaunt/ReikenorGrimhailer.cpp
        nighthaunt/SpiritTorment.cpp
        nighthaunt/DreadbladeHarrow.cpp
        nighthaunt/LordExecutioner.cpp
        nighthaunt/TombBanshee.cpp
        nighthaunt/LadyOlynder.cpp
        nighthaunt/BlackCoach.cpp

        beastsofchaos/BeastsOfChaosBase.cpp
        beastsofchaos/Ghorgon.cpp
        beastsofchaos/Gors.cpp
        beastsofchaos/Bestigors.cpp
        beastsofchaos/Bullgors.cpp
        beastsofchaos/Ungors.cpp
        beastsofchaos/Cygor.cpp
        beastsofchaos/Centigors.cpp
        beastsofchaos/Doombull.cpp
        beastsofchaos/Chimera.cpp
        beastsofchaos/Beastlord.cpp
        beastsofchaos/GreatBrayShaman.cpp
        beastsofchaos/UngorRaiders.cpp
        beastsofchaos/TuskgorChariots.cpp
        beastsofchaos/Cockatrice.cpp
        beastsofchaos/ChaosSpawn.cpp
        beastsofchaos/ChaosWarhounds.cpp
        beastsofchaos/Jabberslythe.cpp
        beastsofchaos/DragonOgors.cpp
        beastsofchaos/DragonOgorShaggoth.cpp
        beastsofchaos/Razorgors.cpp

        slaanesh/SlaaneshBase.cpp
        slaanesh/Fiends.cpp
        slaanesh/Daemonettes.cpp
        slaanesh/Seekers.cpp
        slaanesh/KeeperOfSecrets.cpp
        slaanesh/Hellstriders.cpp
        slaanesh/ShalaxiHelbane.cpp
        slaanesh/SeekerChariots.cpp
        slaanesh/BladebringerSeekerChariot.cpp
        slaanesh/ExaltedChariot.cpp
        slaanesh/BladebringerExaltedChariot.cpp
        slaanesh/Hellflayer.cpp
        slaanesh/BladebringerHellflayer.cpp
        slaanesh/TheMasque.cpp
        slaanesh/Viceleader.cpp
        slaanesh/InfernalEnrapturess.cpp
        slaanesh/SyllEsske.cpp
        slaanesh/ContortedEpitome.cpp

        nurgle/Nurgle.cpp
        nurgle/Plaguebearers.cpp
        nurgle/LordOfPlagues.cpp
        nurgle/PutridBlightkings.cpp
        nurgle/BeastsOfNurgle.cpp
        nurgle/TheGlottkin.cpp
        nurgle/PlagueDrones.cpp
        nurgle/PusgoyleBlightlords.cpp
        nurgle/Rotigus.cpp
        nurgle/GreatUncleanOne.cpp
        nurgle/FeculaFlyblown.cpp
        nurgle/TheWurmspat.cpp

        death/LegionOfNagash.cpp
        death/ArkhanTheBlack.cpp
        death/BlackKnights.cpp
        death/BloodKnights.cpp
        death/DireWolves.cpp
        death/GraveGuard.cpp
        death/SkeletonWarriors.cpp
        death/Vargheists.cpp
        death/Zombies.cpp
        death/WightKingBlackAxe.cpp
        death/WightKingTombBlade.cpp
        death/Necromancer.cpp
        death/MorghastArchai.cpp
        death/MorghastHarbingers.cpp
        death/Nagash.cpp

        fec/FleshEaterCourts.cpp
        fec/CryptHorrors.cpp
        fec/CryptGhouls.cpp
        fec/CryptFlayers.cpp
        fec/CryptInfernalCourtier.cpp
        fec/CryptGhastCourtier.cpp
        fec/CryptHaunterCourtier.cpp
        fec/AbhorrantArchregent.cpp
        fec/AbhorrantGhoulKing.cpp
        fec/GhoulKingOnTerrorgheist.cpp
        fec/GhoulKingOnZombieDragon.cpp
        fec/RoyalTerrorgheist.cpp
        fec/RoyalZombieDragon.cpp
        fec/VarghulfCourtier.cpp

        wanderers/Wanderer.cpp
        wanderers/EternalGuard.cpp
        wanderers/GladeGuard.cpp
        wanderers/WildwoodRangers.cpp

        dispossessed/Dispossessed.cpp
        dispossessed/Hammerers.cpp
        dispossessed/Thunderers.cpp
        dispossessed/Warriors.cpp
        dispossessed/Longbeards.cpp
        dispossessed/Quarrellers.cpp
        dispossessed/Ironbreakers.cpp
        dispossessed/Irondrakes.cpp
        dispossessed/Unforged.cpp
        dispossessed/Runelord.cpp
        dispossessed/WardenKing.cpp

        skaven/Skaventide.cpp
        skaven/Clanrats.cpp
        skaven/GutterRunners.cpp
        skaven/NightRunners.cpp
        skaven/PlagueMonks.cpp
        skaven/Stormfiends.cpp
        skaven/Stormvermin.cpp
        skaven/HellPitAbomination.cpp
        skaven/RatlingGun.cpp
        skaven/WarpfireThrower.cpp
        skaven/WarpLightningCannon.cpp
        skaven/Doomwheel.cpp
        skaven/Doomflayer.cpp

        tzeentch/TzeentchBase.cpp
        tzeentch/KairicAcolytes.cpp
        tzeentch/HorrorsOfTzeentch.cpp
        tzeentch/TzaangorEnlightened.cpp
        tzeentch/TzaangorEnlightenedOnDisks.cpp
        tzeentch/Tzaangors.cpp
        tzeentch/FlamersOfTzeentch.cpp
        tzeentch/ExaltedFlamersOfTzeentch.cpp
        tzeentch/TzaangorSkyfires.cpp
        tzeentch/ScreamersOfTzeentch.cpp
        tzeentch/LordOfChange.cpp
        tzeentch/KairosFateweaver.cpp
        tzeentch/MagisterOnDisc.cpp
        tzeentch/Magister.cpp
        tzeentch/BurningChariots.cpp
        tzeentch/GauntSummoner.cpp
        tzeentch/TheChangeling.cpp
        tzeentch/OgroidThaumaturge.cpp
        tzeentch/TzaangorShaman.cpp
        tzeentch/Fateskimmer.cpp
        tzeentch/Curseling.cpp
        tzeentch/Vortemis.cpp
        tzeentch/Fatemaster.cpp

        ironjawz/Ironjawz.cpp
        ironjawz/OrrukArdboys.cpp
        ironjawz/OrrukBrutes.cpp
        ironjawz/GoreGruntas.cpp
        ironjawz/OrrukMegaboss.cpp
        ironjawz/OrrukWarchanter.cpp
        ironjawz/Gordrakk.cpp
        ironjawz/MegabossOnMawKrusha.cpp
        ironjawz/IronskullsBoyz.cpp

        bonesplitterz/Bonesplitterz.cpp
        bonesplitterz/BoarboyManiaks.cpp
        bonesplitterz/ManiakWeirdnob.cpp
        bonesplitterz/OrrukArrowBoys.cpp
        bonesplitterz/OrrukMorboys.cpp
        bonesplitterz/SavageBigBoss.cpp
        bonesplitterz/SavageBigStabbas.cpp
        bonesplitterz/SavageBoarboys.cpp
        bonesplitterz/SavageOrruks.cpp
        bonesplitterz/Wardokk.cpp
        bonesplitterz/WurrgogProphet.cpp

        eldritchcouncil/Swordmasters.cpp
        eldritchcouncil/Loremaster.cpp
        eldritchcouncil/Archmage.cpp
        eldritchcouncil/ArchmageOnDragon.cpp

        greenskinz/Orruks.cpp
        greenskinz/OrrukBoarboys.cpp
        greenskinz/OrrukBoarChariots.cpp
        greenskinz/OrrukGreatShaman.cpp
        greenskinz/OrrukWarboss.cpp
        greenskinz/OrrukWarbossWyvern.cpp
        greenskinz/RogueIdol.cpp

        seraphon/Seraphon.cpp
        seraphon/DreadSaurian.cpp
        seraphon/SaurusGuard.cpp
        seraphon/SaurusKnights.cpp
        seraphon/SaurusWarriors.cpp
        seraphon/Skinks.cpp
        seraphon/SaurusOldblood.cpp
        seraphon/SaurusSunblood.cpp
        seraphon/SaurusOldbloodCarnosaur.cpp
        seraphon/SaurusVeteranCarnosaur.cpp
        seraphon/Troglodon.cpp
        seraphon/Razordons.cpp
        seraphon/Salamanders.cpp
        seraphon/Bastiladon.cpp
        seraphon/Kroxigor.cpp
        seraphon/RipperdactylRiders.cpp
        seraphon/TerradonRiders.cpp
        seraphon/Stegadon.cpp
        seraphon/EngineOfTheGods.cpp
        seraphon/SaurusVeteranColdOne.cpp

        fyreslayers/AuricHearthguard.cpp
        fyreslayers/HearthguardBerzerkers.cpp
        fyreslayers/VulkiteBerzerkers.cpp
        fyreslayers/Doomseeker.cpp
        fyreslayers/Battlesmith.cpp
        fyreslayers/GrimwrathBerzerker.cpp
        fyreslayers/AuricRunefather.cpp
        fyreslayers/AuricRunemaster.cpp
        fyreslayers/AuricRuneson.cpp
        fyreslayers/AuricRunesmiter.cpp
        fyreslayers/AuricRunefatherOnMagmadroth.cpp
        fyreslayers/AuricRunesmiterOnMagmadroth.cpp
        fyreslayers/AuricRunesonOnMagmadroth.cpp
        fyreslayers/Fyreslayer.cpp

        everchosen/Archaon.cpp
        everchosen/Varanguard.cpp

        slavestodarkness/SlavesToDarkness.cpp
        slavestodarkness/ChaosChosen.cpp
        slavestodarkness/ChaosKnights.cpp
        slavestodarkness/ChaosMarauders.cpp
        slavestodarkness/ChaosMarauderHorsemen.cpp
        slavestodarkness/ChaosWarriors.cpp
        slavestodarkness/CorvusCabal.cpp
        slavestodarkness/CypherLords.cpp
        slavestodarkness/Furies.cpp
        slavestodarkness/IronGolems.cpp
        slavestodarkness/Raptoryx.cpp
        slavestodarkness/Slambo.cpp
        slavestodarkness/SplinteredFang.cpp
        slavestodarkness/TheUnmade.cpp
        slavestodarkness/UntamedBeasts.cpp
        slavestodarkness/ChaosLordOnKarkadrak.cpp
        slavestodarkness/ChaosLordOnManticore.cpp
        slavestodarkness/ChaosWarshrine.cpp
        slavestodarkness/ChaosSorcererOnManticore.cpp
        slavestodarkness/ChaosSorcerer.cpp
        slavestodarkness/DarkoathChieftain.cpp
        slavestodarkness/DarkoathWarqueen.cpp
        slavestodarkness/ExaltedHeroOfChaos.cpp
        slavestodarkness/ChaosLordOnDaemonicMount.cpp
        slavestodarkness/ChaosLord.cpp
        slavestodarkness/ChaosChariots.cpp
        slavestodarkness/GorebeastChariots.cpp
        slavestodarkness/SpireTyrants.cpp
        slavestodarkness/MindstealerSphiranx.cpp
        slavestodarkness/FormoroidCrusher.cpp
        slavestodarkness/OgroidMyrmidon.cpp

        freeagents/GotrekGurnisson.cpp

        citiesofsigmar/Anointed.cpp
        citiesofsigmar/Assassin.cpp
        citiesofsigmar/Battlemage.cpp
        citiesofsigmar/BattlemageOnGriffon.cpp
        citiesofsigmar/BlackArkCorsairs.cpp
        citiesofsigmar/BlackArkFleetmaster.cpp
        citiesofsigmar/BlackGuard.cpp
        citiesofsigmar/Bleakswords.cpp
        citiesofsigmar/CelestialHurricanum.cpp
        citiesofsigmar/CitiesOfSigmar.cpp
        citiesofsigmar/Cogsmith.cpp
        citiesofsigmar/DarkRiders.cpp
        citiesofsigmar/Darkshards.cpp
        citiesofsigmar/DemigryphKnights.cpp
        citiesofsigmar/DrakespawnChariots.cpp
        citiesofsigmar/DrakespawnKnights.cpp
        citiesofsigmar/DreadlordOnBlackDragon.cpp
        citiesofsigmar/Dreadspears.cpp
        citiesofsigmar/EternalGuard.cpp
        citiesofsigmar/Executioners.cpp
        citiesofsigmar/Flagellants.cpp
        citiesofsigmar/FlamespyrePhoenix.cpp
        citiesofsigmar/FreeguildCrossbowmen.cpp
        citiesofsigmar/FreeguildGeneral.cpp
        citiesofsigmar/FreeguildGeneralOnGriffon.cpp
        citiesofsigmar/FreeguildGreatswords.cpp
        citiesofsigmar/FreeguildGuard.cpp
        citiesofsigmar/FreeguildHandgunners.cpp
        citiesofsigmar/FreeguildOutriders.cpp
        citiesofsigmar/FreeguildPistoliers.cpp
        citiesofsigmar/FrostheartPhoenix.cpp
        citiesofsigmar/Gyrobombers.cpp
        citiesofsigmar/Gyrocopters.cpp
        citiesofsigmar/Hammerers.cpp
        citiesofsigmar/HelblasterVolleyGun.cpp
        citiesofsigmar/HelstormRocketBattery.cpp
        citiesofsigmar/Ironbreakers.cpp
        citiesofsigmar/Irondrakes.cpp
        citiesofsigmar/Kharibdyss.cpp
        citiesofsigmar/Longbeards.cpp
        citiesofsigmar/LuminarkOfHysh.cpp
        citiesofsigmar/NomadPrince.cpp
        citiesofsigmar/PhoenixGuard.cpp
        citiesofsigmar/Runelord.cpp
        citiesofsigmar/ScourgerunnerChariots.cpp
        citiesofsigmar/ShadowWarriors.cpp
        citiesofsigmar/SistersOfTheThorn.cpp
        citiesofsigmar/SistersOfTheWatch.cpp
        citiesofsigmar/Sorceress.cpp
        citiesofsigmar/SorceressOnBlackDragon.cpp
        citiesofsigmar/SteamTank.cpp
        citiesofsigmar/WardenKing.cpp
        citiesofsigmar/WarHydra.cpp
        citiesofsigmar/WildRiders.cpp
        citiesofsigmar/WildwoodRangers.cpp

        mawtribes/MawtribesBase.cpp
        mawtribes/Tyrant.cpp
        mawtribes/OgorGluttons.cpp
        mawtribes/Leadbelchers.cpp
        mawtribes/Ironblaster.cpp
        mawtribes/Slaughtermaster.cpp
        mawtribes/Butcher.cpp
        mawtribes/Gorgers.cpp
        mawtribes/Ironguts.cpp
        mawtribes/Scraplauncher.cpp
        mawtribes/Gnoblars.cpp
        mawtribes/Firebelly.cpp
        mawtribes/Maneaters.cpp
        mawtribes/FrostlordStonehorn.cpp
        mawtribes/FrostlordThundertusk.cpp
        mawtribes/HuskardStonehorn.cpp
        mawtribes/HuskardThundertusk.cpp
        mawtribes/StonehornBeastriders.cpp
        mawtribes/ThundertuskBeastriders.cpp

        ossiarch/OssiarchBonereaperBase.cpp
        ossiarch/MortekGuard.cpp
        ossiarch/NecropolisStalkers.cpp
        ossiarch/Vokmortian.cpp
        ossiarch/KavalosDeathriders.cpp
        ossiarch/ImmortisGuard.cpp
        ossiarch/GothizzarHarvester.cpp
        ossiarch/MortekCrawler.cpp
        ossiarch/OrpheonKatakros.cpp
        ossiarch/LiegeKavalos.cpp
        ossiarch/KavalosZandtos.cpp
        ossiarch/Boneshaper.cpp
        ossiarch/Soulmason.cpp
        ossiarch/Soulreaper.cpp
        ossiarch/MorghastArchai.cpp
        ossiarch/MorghastHarbingers.cpp
        ossiarch/ArkhanTheBlack.cpp

        kharadron/AethericNavigator.cpp
        kharadron/AetherKhemist.cpp
        kharadron/ArkanautAdmiral.cpp
        kharadron/ArkanautCompany.cpp
        kharadron/ArkanautFrigate.cpp
        kharadron/ArkanautIronclad.cpp
        kharadron/BrokkGrungsson.cpp
        kharadron/EndrinmasterWithHarness.cpp
        kharadron/EndrinmasterWithSuit.cpp
        kharadron/Endrinriggers.cpp
        kharadron/GrundstokGunhauler.cpp
        kharadron/GrundstokThunderers.cpp
        kharadron/KharadronBase.cpp
        kharadron/Skywardens.cpp

)

target_include_directories(
        AoSSim PUBLIC
        ${GTK3_INCLUDE_DIRS}
        ../include
)

target_link_libraries(
        AoSSim
        ${GTK3_LIBRARIES}
)

target_compile_options(
        AoSSim PRIVATE
        -Wextra
        -Wall
        -Wno-unused-parameter
)
